# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: account_key_multi_flow.py  admin_keys.py  audio_bridge.py
src/daguito/: __init__.py  _admin_http.py  _client_headers.py  _url.py  admin_account_keys.py  admin_analytics.py  admin_budgets.py  admin_flow_types.py  admin_flows.py  admin_knowledge.py  admin_nodes.py  admin_public_keys.py  admin_types.py  audio_stream_session.py  client.py  emitter.py  knowledge_session.py  models.py  templates.py  types.py  upload.py  webhook_run_stream.py  webhook_session.py  webhook_stream_session.py
tests/: test_admin_client.py  test_audio_stream_session.py  test_integration.py  test_templates.py  test_webhook_stream_session.py
