[project]
name = "daguito-sdk"
version = "0.4.2"
description = "Official Python SDK for Daguito — conversational AI flows, streaming webhooks, and RAG."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Daguito", email = "daguito.contact@gmail.com" }
]
keywords = ["daguito", "ai", "llm", "rag", "agents", "streaming", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "websockets>=14.0,<17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://daguito.com"
Source = "https://github.com/daguitocontact-lang/python-sdk"
Issues = "https://github.com/daguitocontact-lang/python-sdk/issues"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "daguito"
module-root = "src"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
